[BE,DOC] Api update report and split into new report
